<resources>
    <string name="app_name">GamerCommunity</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_user">¿Cuál será tu nombre de usuario?</string>
    <string name="tv_nombre">¿Cuál es tu nombre completo?</string>
    <string name="tv_email">Inserta un correo electrónico</string>
    <string name="tv_password">Inserta una contraseña</string>
    <string name="tv_repetir">Repetir contraseña</string>
    <string name="et_escribir">Escribe aquí</string>
    <string name="bt_volver">Volver</string>
    <string name="bt_registro">Registrarse</string>
    <string name="bt_login">Iniciar sesión</string>
    <string name="tv_login">Correo electrónico</string>
    <string name="tv_pwd">Contraseña</string>
    <string name="la_titulo">GamerCommunity</string>
    <string name="bt_leer">Leer</string>
    <string name="bt_editar">Editar</string>
    <string name="tv_titulo">Título</string>
    <string name="tv_descripcion">Añade una descripción (Opcional)</string>
    <string name="tv_contenido">Contenido</string>
    <string name="tv_pwdemail">Inserta la contraseña del correo</string>
    <string name="bt_cambiar">Guardar</string>
    <string name="bt_siguiente">Siguiente</string>
    <string name="tv_busqueda">Busca a un usuario con su email</string>
    <string name="tv_add_sigo">Añade a un usuario con su email</string>
    <string name="tv_nombre_perfil">Nombre completo</string>
    <string name="tv_titulo_sigo">Usuarios a los que sigo</string>
    <string name="tv_user_perfil">Usuario</string>
    <string name="tv_valoración">Valora este artículo</string>
    <string name="tv_redactar_comentario">Sección de comentarios</string>
    <string name="lorem">Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum,
        y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.
    Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.
    Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.
    </string>
</resources>